Fix layout issues in Safari

--- a/less/style.less
+++ b/less/style.less
@@ -23,6 +23,7 @@ body,
 main {
   position: relative;
 
+  display: flex;
   flex: 1;
 
   #st2-fonts > #body;
