--- a/modules/st2-panel/style.less
+++ b/modules/st2-panel/style.less
@@ -2,9 +2,9 @@
 
 .st2-panel {
   display: flex;
+  flex: 1;
 
   width: 100%;
-  height: 100%;
 
   background-color: white;
 
